--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <style>
+		td :first-child {
+			color: red;
+		}
+		td :last-child {
+			color: blue;
+		}
+  </style>
 </head>
+
 <body>
-    
+  <h1>カレンダー</h1>
+  <div id="calender-field"></div>
+
+  <button id="prev">prev</button>
+  <button id="next">next</button>
+  <script type="text/javascript" src="main.js"></script>
 </body>
-</html>
